@startuml
' LexiElectronics high-level class diagram
skinparam classAttributeIconSize 0

package Controllers {
    class HomeController {
		+Index()
		+ContactUs()
	}

	class ShopController {
		+Index()
		+ProductDetails(id)
		+ShoppingCart()
		+AddToCart(productId, quantity)
		+RemoveCartItem(productId)	
		+Checkout()
		+CheckoutFinished(checkoutVM)
		+SendOrder()
		+MyOrders()
		+ViewOrder()
		-GetCartFromSession()
		-SaveCartToSession(cart)
	}

	class AdminController {
	  +Index()
	  +ViewAndEditOrder(id)
	  +AllProducts()
	  +ShowProduct(id)
	  +CreateProduct()
	  +SaveCreatedProduct(product)
	  +EditProduct(id)
	  +SaveEditedProduct(product)
	  +AllProductCategories()
	  +CreateProductCategory()
	  +SaveCreatedProductCategory(productCategory)
	  +EditProductCategory(id)
	  +SaveEditedProductCategory(productCategory)
	  +RemoveProductCategory(id)
	  +SaveOrder(order)
	  +RemoveOrder(orderId)
	  +RemoveOrderItem(orderId, orderItemId)
	  +AllUsers()
	  +ShowUser(id)
	  +EditUser(id)
	  +SaveEditedUser(user)
	  +AllManufacturers()
	  +CreateManufacturer()
	  +SaveCreatedManufacturer(manufacturer)
	  +EditManufacturer(id)
	  +SaveEditedManufacturer(manufacturer)
      +RemoveManufacturer(id)
	  -UpdateUserRoleAsync(userId, newRoleId)
	  -IsUserloggedIn()
	}
}

package Models {
	
  class ApplicationUser {
	+string Id
	+string Firstname
	+string Lastname
	+string Email
	+string PhoneNumber
	+string InvoiceName
	+string InvoiceStreetAddress
	+string InvoiceZipcode
	+string InvoiceCity
	+string? DeliveryName
	+string? DeliveryStreetAddress
	+string? DeliveryZipcode
	+string? DeliveryCity
	+bool PreventAccess
	+string? UserRoleId
	+string? UserRoleName
	+string Discriminator
	+List<SelectListItem> UserRoleListItems
  }

  class Product {
	+int Id
	+string Name
	+string ArticleNo
	+string ShortDescription
	+string LongDescription
	+decimal Price
	+int Stock
	+string? ImageFilename
	+IFormFile? ImageFile
	+int ProductCategoryId
	+int ManufacturerId
	+bool VisibleInShop
	+int Quantity 
	+int nbrOfItemsSold
	+ProductCategory Category
	+Manufacturer Manufacturer
  }

  class ProductCategory {
	+int Id
	+string Name
	+string Description
	+List<Product> Products
  }

  class Manufacturer {
	+int Id
	+string BrandName
	+string CompanyName
	int? NbrOfProducts
  }


  class Order {
	+int Id
	+string UserIdStr
	+ApplicationUser User
	+DateTime OrderDate
	+int TotalSum
	+int FreightSum { get; set; }        
    +int TotalSumToPay 
	+string Status
	+List<OrderItem> OrderItems
  }

  class OrderItem {
	+int Id
	+int OrderId
	+Order Order 
	+Product Product
	+int ProductId
	+int Quantity
	+int Price
	+int Sum	
  }
}

package Models.ViewModels {
  class ProductVM {
	+int Id
	+string Name
    +string? ArticleNo
	+string LongDescription
    +string ShortDescription
    +int Price
    +int? Stock
    +string? ImageFilename
    +IFormFile? ImageFile
    +int? ProductCategoryId
	+int? ManufacturerId
    +bool VisibleInShop
	+List<SelectListItem> ProductCategoryListItems
	+List<SelectListItem> ManufacturerListItems
  }

  class CheckoutVM {
	+Order order
    +ApplicationUser User
    +ShoppingCartDto cartDto
    +bool DeliveryAddressExists
    +string ReturnUrl
    +int TotalSum 
	+int FreightSum
    +int TotalSumToPay
    +decimal Moms
    +bool PaymentResult
  }
}

package Models.DTOs {
  class CartItemDto {
	+int ProductId
    +string ProductName
    +int Price
    +int Quantity
    +decimal TotalSum => Price * Quantity;
  }

  class ShoppingCartDto 
  {
    public List<CartItemDto> CartItems { get; set; }

    public decimal TotalSum => CartItems.Sum(i => i.Price * 
}

' Associations
ProductCategory "1" -- "*" Product : contains
Manufacturer "1" -- "*" Product : manufactures
ApplicationUser "1" -- "*" Order : places
Order "1" -- "*" OrderItem : includes
Product "1" -- "*" OrderItem : referencedBy

' Identity tables (simplified)
class AspNetUsers
class AspNetRoles
class AspNetUserRoles
AspNetUsers "1" -- "1" AspNetUserRoles
AspNetRoles "1" -- "1" AspNetUserRoles

' Notes
note left of AdminController
Uses ApplicationDbContext, UserManager, RoleManager,
SignInManager and IWebHostEnvironment
end note

@enduml